# ImageObjectRemoval

./: README.md  pyproject.toml
docs/: ARCHITECTURE.md  INFERENCE.md  PROJECT_STRUCTURE.md  TRAINING.md
omnieraser/: __init__.py
scripts/: gradio_control_lora_flux.py  test_control_lora_flux.py  train_control_lora_flux.py  train_control_lora_flux.sh
