[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "omnieraser"
version = "0.1.0"
description = "Diffusion-based image object removal using FLUX Control-LoRA"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
include = ["omnieraser*"]
